--- a/School_HTML/과제/2423001_권혁일.html
+++ b/School_HTML/과제/2423001_권혁일.html
@@ -41,8 +41,8 @@
 
     <article id="media">
       <h2>추천 콘텐츠</h2>
-      <video src="https://www.w3schools.com/html/mov_bbb.mp4" controls width="480"></video><br><br>
-      <audio src="https://www.w3schools.com/html/horse.mp3" controls></audio>
+      <video src="https://rr6---sn-ab02a0nfpgxapox-bh2sd.googlevideo.com/videoplayback?expire=1745841126&ei=hhcPaMbsEvLcybgP_eqXYQ&ip=104.28.225.188&id=o-AEt6JcFCnopN9Q79DEARTkHwWovsLB__xEFfC7MiaCMs&itag=18&source=youtube&requiressl=yes&xpc=EgVo2aDSNQ%3D%3D&rms=au%2Cau&bui=AecWEAbtoQf13BElE_O-Y3Kc9cfe-mkjn_YjqtEZLWAJyxIvux-L3alx3KYxyjmeXcCE4a-tFM4DexC_&vprv=1&svpuc=1&mime=video%2Fmp4&ns=4s0aESBpbGx2FT4g66y5YHoQ&rqh=1&gir=yes&clen=58164338&ratebypass=yes&dur=736.026&lmt=1744566447470839&lmw=1&c=TVHTML5&sefc=1&txp=4538534&n=M4j5_bDWbIqyFQ&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cxpc%2Cbui%2Cvprv%2Csvpuc%2Cmime%2Cns%2Crqh%2Cgir%2Cclen%2Cratebypass%2Cdur%2Clmt&sig=AJfQdSswRAIgCvzBx6mTtxGvyMXAky8GKEISmUKG_ldH1c1K8WFuR5QCIElWHJAp0NSRgbuzhiGBNOl9obd-ObIeV7uIPNczAZXg&title=%EC%9D%B4%EC%A0%A0+%EB%A7%90%ED%95%98%EB%8A%94+%EA%B0%9C%EC%9D%B8%EA%B8%B0%EA%B9%8C%EC%A7%80..+%EC%9A%B0%EB%A6%AC%EA%B0%80+%EB%8F%99%EB%AC%BC%EB%86%8D%EC%9E%A5+%EC%97%AD%EB%8C%80%EA%B8%89+%EC%B2%9C%EC%9E%AC%EA%B2%AC%EC%9D%B4+%EB%90%9C+%EC%9D%B4%EC%9C%A0&redirect_counter=1&rm=sn-4g5eys7s&rrc=104&fexp=24350590,24350737,24350827,24350961,24351173,24351429,24351431,24351495,24351528,24351543,24351545,24351638,24351658,24351662,24351673,24351691,24351704,24351759&req_id=7c2ce625589da3ee&cms_redirect=yes&cmsv=e&ipbypass=yes&met=1745839337,&mh=yV&mip=210.101.236.203&mm=31&mn=sn-ab02a0nfpgxapox-bh2sd&ms=au&mt=1745838974&mv=u&mvi=6&pl=24&lsparams=ipbypass,met,mh,mip,mm,mn,ms,mv,mvi,pl,rms&lsig=ACuhMU0wRQIgdiAshmazc4tVaFLxszjEVHG6XcWglu096kmUCsuLGOwCIQD52u0uIM4ENnbnXB07gNZbsDn2vmJPuZIJrAuLZya8yg%3D%3D" controls width="480"></video><br><br>
+      <audio src="./UP (KARINA Solo).mp3" controls></audio>
     </article>
 
     <aside id="links">
@@ -62,9 +62,21 @@
             <th>좋아하는 음식</th>
         </tr>
         <tr>
-            <td>오사카</td>
-            <td>추성훈</td>
-            <td>삼겹살</td>
+            <td>
+              <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNTA0MDlfMjU4%2FMDAxNzQ0MTI2NzkzOTEx.nwRPgDd7Yr4uEo7u1uA0FLZZdAvjM5-x_tYUTTs7hO0g.iAIdGuHN5tF22Za9dAahVvXm0sgt_-5iuNHoAEQpGccg.PNG%2Fimage.png&type=a340"
+                  alt="오사카" width="250" style="vertical-align: middle;">
+              <br>오사카</td>
+            <td>
+              <a href="https://www.youtube.com/@Choosunghoon_ajossi" target="_blank" rel="noopener">
+                <img src="https://yt3.googleusercontent.com/kR9U3k3Mu7tBH6pF8YCT5LzPReRhx2S_GF90xnqvouL0FB5ThFVrN1SZ7n6pjpzmpeThakMLhDQ=s160-c-k-c0x00ffffff-no-rj" 
+                     alt="추성훈 채널" width="200" style="vertical-align: middle;">
+                <br>추성훈
+              </a>
+            </td>
+            <td>
+              <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNTAxMTBfMjEz%2FMDAxNzM2NDY4NTI0NTgz.c4SaQ4gqp5H8loRs0-XzMdriVyI9xmYswXkY4yMUX8sg.NGvbVA-oi3EeK1UJQhiaN0HJIDJuzDJk2itKhirvwvkg.JPEG%2F900%25A3%25DF20250109%25A3%25DF191111.jpg&type=a340"
+                  alt="삼겹살" width="250" style="vertical-align: middle;">
+              <br>삼겹살</td>
         </tr>
         <tr>
             <td>오키나와</td>
@@ -72,7 +84,7 @@
             <td>돈까스</td>
         </tr>
         <tr>
-            <td>발리</td>
+            <td>삿포로</td>
             <td>말왕</td>
             <td>제육볶음</td>
         </tr>
