--- a/School_HTML/6_10/index.html
+++ b/School_HTML/6_10/index.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./main.scss">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>document</title>
+  <link rel="stylesheet" href="./main.scss">
 </head>
 <body>
-   <div class="main_container">
-        <div class="card_container">
-            <div class="card"></div>
-        </div>
-        <div class="card_container">
-            <div class="card"></div>
-        </div>
-        <div class="card_container">
-            <div class="card"></div>
-        </div>
-    </div>
+  <h1>Hello World</h1>
 
-    
+  <!-- <div class="main_container">
+    <div class="card_container">
+      <div class="card">1 2 3</div>
+    </div>
+    <div class="card_container">
+      <div class="card">4 5 6</div>
+    </div>
+    <div class="card_container">
+      <div class="card">7 8 9</div>
+    </div>
+  </div>
+
+  <div class="img_container">
+    <div class="img">Hello</div>
+    <div class="img">World</div>
+    <div class="img">^__^</div>
+  </div> -->
+  <div class="card_container">
+    <div class="card">1</div>
+    <div class="card">2</div>
+    <div class="card">3</div>
+    <div class="card">4</div>
+    <div class="card">5</div>
+  </div>
 </body>
 </html>
