--- a/School_HTML/06_17_2/index.html
+++ b/School_HTML/06_17_2/index.html
@@ -11,8 +11,20 @@
     <link rel="stylesheet" href="main.scss"/>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <div class="card-box-diamonds">
+<header>
+    <!-- 메뉴 -->
+    <nav>
+        <ul class="menu">
+            <li><a class="link odd" href="">menu 1</a></li>
+            <li><a class="link even" href="">menu 2</a></li>
+            <li><a class="link odd" href="">menu 3</a></li>
+            <li><a class="link even "href="">menu 4</a></li>
+        </ul>
+    </nav>
+</header>
+<main>
+    <!-- 카드 박스-->
+    <div class="card-box">
         <div class="card-container">
             <div class="card"></div>
         </div>
@@ -53,5 +65,11 @@
             <div class="card"></div>
         </div>
     </div>
+</main>
+<footer>
+    <!-- 하단 설명글 : 로고, 주소, 연락처 -->
+    <div class="logo"><img src="./image/logo2.svg"></div>
+    <div class="contact-info">정보~</div>
+</footer>
 </body>
 </html>
